--- a/style/index.css
+++ b/style/index.css
@@ -158,9 +158,8 @@ button:disabled {
     background: rgba(255,255,255,0.5);
     text-align: center;
     vertical-align: middle;
-    font-family: monospace;
-    font-size: 24px;
     cursor: default;
+    position: relative;
 }
 #codeview td:first-child {
     border-left: 1px solid rgba(63,63,63,1);
@@ -170,7 +169,26 @@ button:disabled {
 }
 #codeview td.selected {
     background: rgba(178,34,34,1);
+}
+#codeview td.selected .bitvalue {
     color: white;
+}
+#codeview .bitvalue {
+    font-family: monospace;
+    padding-top: 10px;
+    font-size: 24px;
+}
+#codeview .bittab {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-bottom: 1px solid rgba(63,63,63,1);
+    border-right: 1px solid rgba(63,63,63,1);
+    width: 15px;
+    height: 15px;
+    background: white;
+    text-align: center;
+    font-size: 12px;
 }
 
 #statistic {
@@ -191,4 +209,30 @@ button:disabled {
 }
 #statistic span {
     font-weight: bold;
+}
+
+#options {
+    border-spacing: 0 1px;
+}
+#options tr {
+    height: 18px;
+    cursor: pointer;
+    background: rgba(178, 34, 34, 0.3);
+}
+#options td {
+    font-size: 12px;
+    font-family: monospace;
+    padding-left: 12px;
+}
+#options td:first-child {
+    width: 40px;
+}
+#options tr.correct {
+    background: rgba(34, 178, 34, 0.3);
+}
+#options tr:hover {
+    background: rgba(178, 34, 34, 0.5);
+}
+#options tr.correct:hover {
+    background: rgba(34, 178, 34, 0.5);
 }
